--- a/2_notebook_072024.ipynb
+++ b/2_notebook_072024.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "55b291d4",
+   "metadata": {},
+   "source": [
+    "### Porjet 7 : Développez une preuve de concept"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb9af3f2",
+   "metadata": {},
+   "source": [
+    "Dans ce projet, on va réaliser une veille pour trouver une méthode récente pour améliorer la performance d’un modèle, j'ai choisi de reprendre le projet 6 de prédiction de races de chiens "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83f5fd6b",
+   "metadata": {},
+   "source": [
+    "- Baseline testé précédemment :  **VGG-16**\n",
+    "- Nouveau modèle choisi : **ConvNeXtBase**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "850f4027",
    "metadata": {},
    "source": [
-    "##### Modèle choisi : ConvNeXtBase"
+    "###### Présentation du modèle ConvNeXtBase"
    ]
   },
   {
@@ -500,10 +525,13 @@
    "outputs": [],
    "source": [
     "def show_dogImages_sample(dogImages_folder):\n",
+    "    \"\"\"\n",
+    "    Afficher un exemple d'image de chaque sous dossier (race de chiens)\n",
+    "    \"\"\"\n",
     "    subdirs = [d for d in os.listdir(dogImages_folder) if os.path.isdir(os.path.join(dogImages_folder, d))]\n",
     "    num_subdirs = len(subdirs)\n",
     "    num_cols = 3\n",
-    "    num_rows = (num_subdirs + num_cols - 1) // num_cols  # Calculer le nombre de lignes nécessaires\n",
+    "    num_rows = (num_subdirs + num_cols - 1) // num_cols  # calcul nombre de ligne\n",
     "\n",
     "    fig, axes = plt.subplots(num_rows, num_cols, figsize=(15, num_rows * 3))\n",
     "\n",
@@ -517,10 +545,10 @@
     "            ax.set_title(subdir)\n",
     "            ax.axis('off')\n",
     "        else:\n",
-    "            ax.axis('off')  # Si pas d'images, cacher cet axe\n",
+    "            ax.axis('off')  \n",
     "\n",
     "    for ax in axes.flatten()[len(subdirs):]:\n",
-    "        ax.axis('off')  # Cacher les axes non utilisés\n",
+    "        ax.axis('off')  # pour cacher les axes non utilisés\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n"
@@ -896,7 +924,7 @@
    "id": "786320d9",
    "metadata": {},
    "source": [
-    "Modèle VGG16"
+    "### Modèle VGG16"
    ]
   },
   {
@@ -974,7 +1002,7 @@
    },
    "outputs": [],
    "source": [
-    "# Compiler le modèle\n",
+    "# Compilation du modèle\n",
     "model_vgg16.compile(optimizer=Adam(learning_rate=learning_rate),\n",
     "              loss='categorical_crossentropy',\n",
     "              metrics=['accuracy'])"
@@ -1291,7 +1319,7 @@
     }
    ],
    "source": [
-    "# Entraîner le modèle\n",
+    "# Entraînement du modèle\n",
     "history_vgg16 = model_vgg16.fit(\n",
     "    train_generator,\n",
     "    validation_data=validation_generator,\n",
@@ -1398,6 +1426,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ede25f47",
+   "metadata": {},
+   "source": [
+    "###### Courbes d'apprentissage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "0adf6cb9",
@@ -1425,6 +1461,14 @@
    "source": [
     "# Courbes d'apprentissage\n",
     "plot_learning_curves(history_vgg16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf906ec1",
+   "metadata": {},
+   "source": [
+    "###### Matrice de confusion"
    ]
   },
   {
@@ -1469,7 +1513,7 @@
    "id": "4c29572a",
    "metadata": {},
    "source": [
-    "###### Création du modèle ConvNeXtBase"
+    "### Modèle ConvNeXtBase"
    ]
   },
   {
@@ -1563,7 +1607,7 @@
    },
    "outputs": [],
    "source": [
-    "# Configurer les callbacks\n",
+    "# callbacks\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=0.00001)\n"
    ]
@@ -2030,7 +2074,7 @@
    "id": "f53bde70",
    "metadata": {},
    "source": [
-    "###### Recherche d'hyperparamètres"
+    "###### Recherche d'hyperparamètres (not done)"
    ]
   },
   {
@@ -2394,7 +2438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aad10710",
+   "id": "b0c94e43",
    "metadata": {},
    "source": [
     "#### Affichage des résultats"
@@ -2496,7 +2540,7 @@
    "id": "d2966fb0",
    "metadata": {},
    "source": [
-    "Sauvegarde du Modèle"
+    "###### Sauvegarde du Modèle"
    ]
   },
   {
@@ -2555,7 +2599,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Fonction pour comparer les poids\n",
+    "# Fonction pour comparer les poids des 2 modeles sauvegardé et uploadé\n",
     "def compare_model_weights(model1, model2):\n",
     "    weights1 = model1.get_weights()\n",
     "    weights2 = model2.get_weights()\n",
@@ -2611,54 +2655,6 @@
     "# Comparer les poids des modèles\n",
     "compare_model_weights(model, loaded_model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e46082ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8719eb2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83fd832a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93d38644",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e01849d2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cab11ee5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
